phase3/k8s/demo_mongo/environments/staging/deploy-mongodb.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deploy
  namespace: demo-mongo-apps
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongo
          image: mongo
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: demo-mongodb-svc
  namespace: demo-mongo-apps
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
