phase3/k8s/demo_mongo/environments/staging/deploy-mongoexp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongoexp-deploy
  namespace: demo-mongo-apps
  labels:
    app: mongoexp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongoexp
  template:
    metadata:
      labels:
        app: mongoexp
    spec:
      containers:
        - name: mongo-express
          image: mongo-express
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: demo-mongoexp-svc
  namespace: demo-mongo-apps
spec:
  selector:
    app: mongoexp
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
