phase3/k8s/demo_mongo/environments/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-mongodb-service
  namespace: mongodb
  labels:
    app: demo-mongodb
    service: database
    component: mongodb
    environment: staging
spec:
  type: NodePort
  ports:
  - name: mongodb
    port: 27017
    targetPort: 27017
    nodePort: 30017
  selector:
    app: demo-mongodb
    service: database
    environment: staging
