phase3/k8s/demo_mongo/environments/staging/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-mongo-svc
  namespace: demo-mongo-apps
spec:
  selector:
    app: mongodb
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
