phase3/k8s/demo_mongo/environments/staging/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-app-ingress
  namespace: demo-apps
  # annotations:
  #   kubernetes.io/ingress.class: nginx
spec:
  # ingressClassName: nginx
  rules:
    - host: staging.demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-app-svc
                port:
                  number: 80
